Fix: filter buttons alignment in media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -685,9 +685,15 @@ span {
     }
 
     .filter-btn {
-        width: 140px;
+        width: 160px;
         padding: 2px;
        
+    }
+
+    .filter-div {
+        margin-top: 3rem;
+        width: 100%;
+        padding: 5px;
     }
 
   
